Changed name from restaurant to check_nan in line 59.

--- a/Restaurant_LR.ipynb
+++ b/Restaurant_LR.ipynb
@@ -417,7 +417,7 @@
    "source": [
     "# Checking for missing values in the dataset (NaN values)\n",
     "check_nan = restaurant.isnull().sum()\n",
-    "print(f'Missing Values in the Dataset:\\n{restaurant}\\n')"
+    "print(f'Missing Values in the Dataset:\\n{check_nan}\\n')"
    ]
   },
   {
